@@ -27,6 +27,7 @@ V1.1.5 Friday, July 12 2013
  +Added debug_update preference (but currently disabled via DEBUG_UPDATE in parcellite.h.
  +Fixed GTK warning about GTK_IS_WIDGET/GTK_IS_WINDOW when history window closes.
  +Changed mulituser logic to look at owner of PID dir in /proc (added pid_to_uid).
+ +Added XDG_SESSION_COOKIE check to see if we are in the same X session.
 
  
 V1.1.4 Saturday, January 19 2013
